--- a/tekapp/build.gradle
+++ b/tekapp/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'android'
 
 android {
     compileSdkVersion 19
-    buildToolsVersion "19.0.3"
+    buildToolsVersion '19.0.3'
 
     defaultConfig {
         minSdkVersion 9
@@ -20,5 +20,7 @@ android {
 
 dependencies {
     compile 'com.android.support:appcompat-v7:19.0.1'
+    compile project(':libraries:volley')
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.google.code.gson:gson:2.2.+'
 }
